# HealthPredicAI-main

./: .gitignore  DEPLOY.md  DEPLOYMENT_LIVE.md  PRODUCTION_AUDIT.md  run.bat  start_dev.ps1
.claude/: settings.json  settings.local.json
backend-node/: package.json  server.js
backend-node/controllers/: authController.js  doctorController.js
backend-node/data/: orders.json
backend-node/routes/: admin.js  ai.js  auth.js  doctors.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
frontend/src/components/: CustomerSupportWidget.jsx  DoctorCard.jsx  DoctorFinder.jsx  LogoutButton.jsx  ProtectedRoute.jsx  SettingsPanel.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: DashboardLayout.jsx
frontend/src/locales/: ar.json  bn.json  ml.json  mr.json  te.json
frontend/src/pages/: AppointmentHistory.jsx  BookDoctor.jsx  Dashboard.jsx  Emergency.jsx  LifestyleCoach.jsx  Login.jsx  MedicineInteractions.jsx  MentalWellness.jsx  ModelEvaluationPage.jsx  PatientSignup.jsx  Predict.jsx  PrescriptionPage.jsx  (+3 more)
ml_service/: .env.example  README.md  app.py  auth_server.py  pyproject.toml  requirements.txt  train_model.py
ml_service/data/: bookings.json  doctors.json  mental_checkins.json  timeline.json
ml_service/services/: chatbot_service.py  doctor_service.py  emergency_service.py  family_service.py  interaction_service.py  lifestyle_service.py  mental_service.py  ocr_service.py  prediction_service.py  reminder_service.py  report_analyzer_service.py  timeline_service.py
scripts/: production-test.js
(+64 files in other folders)
