[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_service"
version = "0.1.0"
description = "ML service for ai medicine and disease prediction"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "HealthPredict AI" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
